Fix background images

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
   }
 
   .hero-1-img {
-    background-image: url("./images/hero/hero-img.jpg");
+    background-image: url("/images/hero/hero-img.jpg");
     background-size: cover;
     height: 100%;
     background-position: center;
@@ -20,14 +20,14 @@
   }
 
   .hero-2-img {
-    background-image: url("./images/hero/hero-img-2.jpg");
+    background-image: url("/images/hero/hero-img-2.jpg");
     background-size: cover;
     height: 100%;
     background-position: center;
   }
 
   .hero-3-img {
-    background-image: url("./images/hero/hero-img-3.jpg");
+    background-image: url("/images/hero/hero-img-3.jpg");
     background-size: cover;
     height: 100%;
     background-position: center;
@@ -41,14 +41,14 @@
   }
 
   .hero-5-img {
-    background-image: url("./images/hero/hero-img-5.jpg");
+    background-image: url("/images/hero/hero-img-5.jpg");
     background-size: cover;
     height: 100%;
     background-position: center;
   }
 
   .hero-6-img {
-    background-image: url("./images/hero/hero-img-6.jpg");
+    background-image: url("/images/hero/hero-img-6.jpg");
     background-size: cover;
     height: 100%;
     background-position: center;
